--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier 'src/**/*.{tsx,ts,js}' --write"
+    "format": "prettier 'src/**/*.{tsx,ts,js}' --write",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@mdi/js": "^7.0.96",
@@ -22,6 +24,14 @@
     "swr": "^2.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/addon-links": "^7.1.0",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.1.0",
+    "@storybook/nextjs": "^7.1.0",
+    "@storybook/react": "^7.1.0",
+    "@storybook/testing-library": "^0.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.3.2",
     "@types/numeral": "^2.0.2",
@@ -32,9 +42,11 @@
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.7",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-storybook": "^0.6.13",
     "postcss": "^8.4.24",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.8",
+    "storybook": "^7.1.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6"
   }
