--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/js": "^7.0.96",
     "@reduxjs/toolkit": "^1.9.5",
     "chart.js": "^3.9.1",
+    "echarts": "^5.4.3",
     "formik": "^2.4.2",
     "next": "^13.4.7",
     "numeral": "^2.0.6",
@@ -21,6 +22,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
+    "sass": "^1.64.2",
     "swr": "^2.2.0"
   },
   "devDependencies": {
