--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.8.4",
     "chart.js": "^3.9.1",
     "echarts": "^5.4.3",
     "formik": "^2.4.2",
